# codex-mcp

./: .gitignore  .mcp.json  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  server.json  tsconfig.json  vitest.config.ts
.claude-plugin/: marketplace.json  plugin.json
commands/: codex-flow.md
docs/: benchmarks.md  execution-plan-2026-07-21.md  full-pipeline-review-2026-07-21.md  skill-selection-eval-report.md
fb-video-crawler/: .gitignore  README.md  pyproject.toml
fb-video-crawler/src/fb_crawler/: __init__.py  cli.py  comments.py  errors.py  export.py  http_client.py  metrics.py  numbers.py  url_utils.py
fb-video-crawler/tests/: test_cli.py  test_comments.py  test_export.py  test_http_client.py  test_metrics.py  test_numbers.py  test_url_utils.py
fb-video-crawler/tests/fixtures/: comments_page_1.html  comments_page_2.html  og_tags_real.txt  video_page_real.html
scripts/: bench-lib.mjs  bench-metrics.mjs  bench-runner.mjs  build-skills-index.mjs  call-tool.mjs  check-command-sync.mjs  check-release-consistency.mjs  doctor.mjs  exec-plan.mjs  pack-smoke.mjs  refresh-protocol-fixtures.mjs  session-cost.mjs  skill-eval.mjs  skill-match.mjs  smoke-e2e.mjs  sync-awesome-skills.mjs  tail-progress.mjs  task-waves.mjs
src/: argsBuilder.ts  batchRunner.ts  codexRunner.ts  concurrency.ts  eventParser.ts  index.ts  liveView.ts  metricsLog.ts  notesWriter.ts  progressFormatter.ts  progressNotifier.ts  retryPolicy.ts  runRecovery.ts  runReport.ts  runStatus.ts  server.ts  sessionStore.ts  terminal.ts  toolPayloads.ts  types.ts  workspaceDiff.ts  (+1 more)
(+78 files in other folders)
