[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fb-video-crawler"
version = "0.1.0"
description = "No-token Facebook public video metadata and comment-page scraper"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<10",
    "pytest-cov>=5,<8",
]

[project.scripts]
fb-crawler = "fb_crawler.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["fb_crawler"]

[tool.coverage.report]
fail_under = 80
show_missing = true
